# provider-manager

./: .gitignore  README.md  build-exe.js  package-lock.json  package.json  server.js  start-desktop.cmd  start-desktop.ps1
.github/workflows/: desktop-build.yml
public/: app.js  index.html  styles.css
scripts/: build-desktop.cmd  generate-tauri-icons.js  prepare-tauri-sidecar.js  setup-cargo-mirror.js  tauri-with-dist-target.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/ui/: index.html
