[package]
name = "provider-manager-desktop"
version = "0.1.0"
description = "Desktop shell for ProviderManager."
authors = ["Zang"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
